--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,4 @@
-# Environment variables
-.env
-.env.*
-!.env.example
-
-# Logs
-*.log
-error_log
-access_log
-
-# IDE files
-.idea/
-.vscode/
-*.sublime-project
-*.sublime-workspace
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-.specstory
-.env.local
-.env.development
-.env.production
-.env.test
-
+.clinerules-*
+.roomodes
+memory-bank/
+projectBrief.md
